# 2023_NTUBME_Mechatronics_IV_RPI_Backend

./: .gitignore  .gitmodules  README.md
dds/: fastdds.xml
docker/: .env  Dockerfile  Dockerfile.dev  build.sh  common-services.yaml  dev.sh  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh
ros_ws/src/: .gitignore  .repo
ros_ws/src/bringup/: CMakeLists.txt  package.xml
ros_ws/src/bringup/config/: params.yaml
ros_ws/src/bringup/launch/: ultrasound_launch.py
ros_ws/src/fan_control/: README.md  package.xml  setup.py
ros_ws/src/fan_control/fan_control/: fan_control_node.py
ros_ws/src/imu_sensor/: package.xml  setup.py
ros_ws/src/imu_sensor/imu_sensor/: MPU6050.py  imu_sensor_node.py
ros_ws/src/ultrasound_sensor/: package.xml  setup.cfg
ros_ws/src/ultrasound_sensor/ultrasound_sensor/: ultrasound_sensor_node.py
ros_ws/src/wheel_control/: README.md  package.xml
ros_ws/src/wheel_control/wheel_control/: remote_subscriber.py  sensor_subscirber.py  sensor_subscriber.py  wheel_control_node.py
rtsp/: mediamtx.yml
tmp/ros_ws/src/bringup/: CMakeLists.txt  package.xml
tmp/ros_ws/src/bringup/launch/: ultrasound_launch.py
tmp/ros_ws/src/fan_control/: setup.cfg
tmp/ros_ws/src/imu_sensor/: README.md
tmp/ros_ws/src/imu_sensor/imu_sensor/: MPU6050.py  MPUConstants.py  Quaternion.py
tmp/ros_ws/src/ultrasound_sensor/: README.md  package.xml  setup.py
tmp/ros_ws/src/ultrasound_sensor/ultrasound_sensor/: ultrasound_sensor_node.py
tmp/ros_ws/src/wheel_control/: package.xml  setup.py
