<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Rpi bringup package</description>
  <maintainer email="ptengineerlin@gmail.com">tedlin</maintainer>
  <license>Apache Lincense 2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <!-- <exec_depend>webcam</exec_depend> -->
  <exec_depend>ultrasound_sensor</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
